Layout Issues Fixed

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,14 +1,16 @@
 page-home {
 
   $main-table-col-1-min-width: 200px;
-  $main-table-col-2-min-width: 76px; //--main-table-col-2-min-width: 142px;
-  $main-table-col-3-min-width: 101px;
+  $main-table-col-2-min-width: 106px;
+  $main-table-col-3-min-width: 142px;
   $main-table-col-4-min-width: 265px;
-  $main-table-col-5-min-width: 96px;
+  $main-table-col-5-min-width: 106px;
   $main-table-col-1-width: 27.1vw;
   $main-table-col-2-width: 10.298vw;
   $main-table-heading-width-1: 144px;
   $main-table-heading-width-2: 170px;
+  $main-table-footer-width-1: 144px;
+  $main-table-footer-width-2: 200px;
   $add-class-button-height: 25px;
   $remove-class-button-width: 25px;
 
@@ -20,7 +22,12 @@ page-home {
   ion-row ion-col {
     width: 100% !important;
     height: 100% !important;
-    padding: 0px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+
+    p {
+      transform: translateX(-6px) !important;
+    }
   }
 
   ion-row ion-col.main-table-col-1 {
@@ -29,45 +36,46 @@ page-home {
 
   ion-row ion-col.main-table-col-2 {
     min-width: $main-table-col-2-min-width !important;
+
+    div.heading {
+      min-width: $main-table-heading-width-1 !important;
+    }
   }
 
   ion-row ion-col.main-table-col-3 {
     min-width: $main-table-col-3-min-width !important;
-  }
 
-  ion-row ion-col.main-table-col-3 p {
-    transform: translateX(-$remove-class-button-width / 2) !important; //translateX(-$remove-class-button-width / 2) !important;
+    p {
+      transform: translateX(-21px) !important;
+    }
   }
 
   ion-row ion-col.main-table-col-4 {
     min-width: $main-table-col-4-min-width !important;
+    max-width: $main-table-col-4-min-width !important;
     border-left: 1px solid black;
   }
 
   ion-row ion-col.main-table-col-5 {
     min-width: $main-table-col-5-min-width !important;
-  }
 
-  ion-row ion-col.main-table-col-2 div#table-header {
-    text-align: center !important;
-    width: $main-table-heading-width-1 !important;
-  }
-  /*ion-row ion-col.main-table-col-2 h2#table-header {
-    width: 100% !important;
-    //transform: translateX(calc(-71px));
-  }*/
-  ion-row ion-col.main-table-col-5 div#table-header {
-    text-align: left !important;
-    width: $main-table-heading-width-2 !important;
-  }
+    div.heading {
+      display: flex !important;
+      overflow-x: visible !important;
+      width: 100% !important;
+      margin-left: calc(0px - (#{$main-table-col-4-min-width} / 2));
+      transform: translateX(-50%);
 
-  ion-row ion-col.main-table-col-5 h2#table-header {
-    width: 100% !important;
-    transform: translateX(calc((100% - 361px) / 2));
-    /*
-      This gives actual middle and the above gives a more visually appealing middle
-      transform: translateX(calc((100% - 437px) / 2));
-    */
+      div#top {
+        margin-left: calc(100% - #{$main-table-heading-width-2}) !important;
+        transform: translateX(calc(#{$main-table-heading-width-2} / 2));
+      }
+
+      div#bottom {
+        margin-left: calc(100% - #{$main-table-footer-width-2}) !important;
+        transform: translateX(calc(#{$main-table-footer-width-2} / 2));
+      }
+    }
   }
 
   ion-row ion-col ion-item {
@@ -75,91 +83,86 @@ page-home {
     height: 100% !important;
     padding-left: 0px !important;
     padding-right: 0px !important;
-  }
 
-  ion-row ion-col ion-item#class-input {
-    min-width: $main-table-col-1-min-width !important;
-  }
+    div.centered-select {
+      display: flex;
+      width: 100% !important;
+      height: 100% !important;
+      margin-left: 50% !important;
+      padding-left: 0px !important;
+      padding-right: 0px !important;
+    }
 
-  ion-row ion-col ion-item#letter-grade {
-    min-width: $main-table-col-2-min-width !important;
-  }
+    div.select-item {
+      width: 106px !important;
+      height: 100% !important;
+      transform: translateX(-50px);
+      padding-left: 0px !important;
+      padding-right: 0px !important;
+    }
 
-  ion-row ion-col ion-item#credit-hours {
-    min-width: $main-table-col-3-min-width !important;
-  }
+    ion-select {
+      min-width: 100px !important;
+      height: 100% !important;
+      padding-left: 0px !important;
+      padding-right: 6px !important;
+    }
 
-  ion-row ion-col ion-item#retaking-course {
-    min-width: $main-table-col-4-min-width !important;
-  }
+    ion-select.small {
+      min-width: calc(100% - 10px) !important;
+    }
 
-  ion-row ion-col ion-item#previous-grade {
-    min-width: $main-table-col-5-min-width !important;
-  }
+    ion-select.double-padded {
+      padding-left: 10px !important;
+    }
 
-  ion-row ion-col div#letter-grade {
-    width: 100% !important;
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-    /*padding-left: 50% !important;
-    padding-right: 0px !important;
-    transform: translateX(-38px) !important;*/
-  }
+    button.add-class {
+      height: 25px !important;
+      transform: translateX(5px);
+    }
 
-  ion-row ion-col div#credit-hours {
-    width: 100% !important;
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-    /*padding-left: 50% !important;
-    padding-right: 0px !important;
-    transform: translateX(-46px) !important;
-    width: calc(100% + 23px) !important;*/
-  }
+    button.remove-class {
+      width: 25px !important;
+      height: 25px !important;
+      padding-left: 0px !important;
+      padding-right: 0px !important;
+      transform: translateX(10px);
+    }
 
-  ion-row ion-col div#previous-grade {
-    width: 100% !important;
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-  }
+    ion-label {
+      text-align: left;
+    }
 
-  ion-row ion-col div#retaking-course {
-    width: 100% !important;
-    padding-left: 0px !important;
-    padding-right: 0px !important;
+    ion-label.checkbox {
+      padding-left: 10px;
+      min-width: calc(100% - 10px) !important;
+    }
   }
-
-  ion-row ion-col ion-item ion-select {
-    height: 100% !important;
-    padding-left: 0px !important;
-    padding-right: 6px !important;
-  }
-
-  ion-row ion-col ion-item ion-select#letter-grade {
+  /*ion-row ion-col ion-item ion-select#letter-grade {
     min-width: calc(100% - 10px) !important;
-    /*min-width: 70px !important;
-    max-width: 70px !important;*/
+    //min-width: 70px !important;
+    //max-width: 70px !importan
   }
 
   ion-row ion-col ion-item ion-select#credit-hours {
     min-width: 100% !important;
-    /*min-width: 50px !important;
-    max-width: 50px !important;*/
+    //min-width: 50px !important;
+    //max-width: 50px !important;
   }
 
   ion-row ion-col ion-item ion-select#previous-grade {
     min-width: 100% !important;
-    /*min-width: 50px !important;
-    max-width: 50px !important;*/
+    //min-width: 50px !important;
+    //max-width: 50px !important;
   }
 
   ion-row ion-col ion-item ion-label#checkbox {
     padding-left: 10px;
     min-width: calc(100% - 10px) !important;
-    /*min-width: 50px !important;
-    max-width: 50px !important;*/
-  }
-
-  ion-row ion-col ion-item button#add-class {
+    //min-width: 50px !important;
+    //max-width: 50px !important;
+  }*/
+  /*ion-row ion-col ion-item button#add-class {
     height: 25px !important;
     transform: translateX(5px);
   }
@@ -169,12 +172,10 @@ page-home {
     padding-left: 0px !important;
     padding-right: 0px !important;
     transform: translateX(10px);
-  }
-
-  ion-row ion-col ion-item ion-label {
+  }*/
+  /*ion-row ion-col ion-item ion-label {
     text-align: left;
-  }
-
+  }*/
   p, h2 {
     width: 100%;
     height: 100%;
